--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta content="text/html; charset=us-ascii" http-equiv="Content-Type" />
-  <title>(HTML) Computer Resume</title>
+  <title>(HTML) Oren Robinson Resume</title>
   <style type="text/css">
     h1, h2, h3, ul {margin: 0px; }
     h1 {margin-left: 10px; }
